5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1650_2724.log
== SUBMITION (2019-04-15 22:12:40) 
-- CODE:
num1 = float(input("primeiro numero: ");
num2 = float(input("segundo numero: ");
num3 = float(input("terceiro numero: ");
if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- EXECUTION TIME:
0.126967
-- ERROR:
  File "/home/codebench/codes/1650/2724/main.py", line 1
    num1 = float(input();
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:12:41) 
-- CODE:
num1 = float(input("primeiro numero: ");
num2 = float(input("segundo numero: ");
num3 = float(input("terceiro numero: ");
if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- ERROR:
File "XXXX", line 1
    num1 = float(input();
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:01) 
-- CODE:
num1 = float(input("primeiro numero: "):
num2 = float(input("segundo numero: "):
num3 = float(input("terceiro numero: "):
if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- ERROR:
File "XXXX", line 1
    num1 = float(input():
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:09) 
-- CODE:
num1 = float(input("primeiro numero: ")
num2 = float(input("segundo numero: ")
num3 = float(input("terceiro numero: ")
if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- ERROR:
File "XXXX", line 2
    num2 = float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:13:23) 
-- CODE:
num1 = float(input("primeiro numero: ")
num2 = float(input("segundo numero: ")
num3 = float(input("terceiro numero: ")

if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- ERROR:
File "XXXX", line 2
    num2 = float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:14:09) 
-- CODE:
num1 = float(input("primeiro numero: ")
num2 = float(input("segundo numero: ")
num3 = float(input("terceiro numero: ")

if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- EXECUTION TIME:
0.141364
-- ERROR:
  File "/home/codebench/codes/1650/2724/main.py", line 2
    num2 = float(input()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:10) 
-- CODE:
num1 = float(input("primeiro numero: ")
num2 = float(input("segundo numero: ")
num3 = float(input("terceiro numero: ")

if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- ERROR:
File "XXXX", line 2
    num2 = float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:14:35) 
-- CODE:
num1 = float(input("primeiro numero: "))
num2 = float(input("segundo numero: "))
num3 = float(input("terceiro numero: "))

if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- OUTPUT:
258.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:14:47) 
-- CODE:
num1 = float(input("primeiro numero: "))
num2 = float(input("segundo numero: "))
num3 = float(input("terceiro numero: "))

if(num1 < num2 < num3) :
	print(num2)
if(num2<num1<num3) :
	print(num1)
if(num1<num3<num2) :
	print(num3)
if(num3< num2 <num1) :
	print(num2)
if(num3<num1<num2) :
	print(num1)
if(num2<num3<num1) :
	print(num3)
-- EXECUTION TIME:
0.186556
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
